Fixes on appointments